# approximate-novelty-search

./: .gitignore  Apptainer.ApproximateNoveltySearchFDGrounder  Apptainer.ApproximateNoveltySearchTarskiGrounder  Apptainer.ApxNovelty  Apptainer.ApxNoveltyAnytime  Apptainer.ApxNoveltyFD  Apptainer.ApxNoveltyTarski  CMakeLists.txt  README.md  conf.py  index.md  pip_requirements.txt
.github/workflows/: build_test.yml  pypi_publish.yml  testpypi_publish.yml
cmake/: FindDoxysphinx.cmake
cmake/SuperBuildLinux/: CMakeLists.txt
cmake/docs/: CMakeLists.txt  Doxyfile  cmake_dir_setup.cmake
cmake/docs/doxysphinx/: Doxyfile  pip_requirements.txt
cmake/docs/doxysphinx/customization/: header.html
developersguide/: build.md  configurevscode.md  debug.md  license.md  pypi.md  ubuntu_requirements.md  windows_requirements.md
external_package/fd_translate/: __init__.py  build_model.py
src/component/: closed_list.hxx  match_tree.cxx  match_tree.hxx  new_node_comparer.hxx  open_list.hxx  reachability.cxx  reachability.hxx  watched_lit_succ_gen.cxx  watched_lit_succ_gen.hxx
src/engine/: CMakeLists.txt  approx_novelty_bfws_2h.hxx  approx_novelty_bfws_2h_M.hxx  approx_novelty_bfws_2h_consistency.hxx  approx_novelty_bfws_2h_consistency_M.hxx  approx_novelty_bfws_4h.hxx  approx_novelty_dfs_plus.hxx  approx_novelty_iw.hxx  approx_novelty_rp_iw.hxx  approx_novelty_serialized_search.hxx  approx_novelty_siw.hxx  approx_novelty_siw_plus.hxx  at_bfs.hxx  at_bfs_dq.hxx  at_bfs_dq_mh.hxx  at_gbfs.hxx  at_gbfs_3h.hxx  at_rwbfs_dq.hxx  at_rwbfs_dq_mh.hxx  at_wbfs.hxx  at_wbfs_dq.hxx  at_wbfs_dq_mh.hxx  bfws_2h.hxx  bfws_2h_M.hxx  bfws_2h_consistency.hxx  bfws_2h_consistency_M.hxx  bfws_4h.hxx  brfs.hxx  das.hxx  dfs_plus.hxx  ff_ehc.hxx  ff_gbfs.hxx  ipc2014_rwa.hxx  iw.hxx  rp_iw.hxx  serialized_search.hxx  siw.hxx  siw_plus.hxx
src/legacy_ff_planner/: CMakeLists.txt
src/legacy_ff_planner/at_bfs_f-ffparser/: ipc2014_rwa.hxx  main.cxx
src/legacy_ff_planner/bfs_f-ffparser/: main.cxx
src/legacy_ff_planner/dfs_plus-ffparser/: main.cxx
src/legacy_ff_planner/ff-ffparser/: main.cxx
src/legacy_ff_planner/generic-best_first-ffparser/: ff_gbfs.hxx  ff_rp_heuristic.hxx
src/legacy_ff_planner/iw/: main.cxx
src/legacy_ff_planner/iw_plus-ffparser/: main.cxx
src/legacy_ff_planner/siw-ffparser/: main.cxx
src/legacy_ff_planner/siw_plus-ffparser/: main.cxx
src/legacy_ff_planner/siw_plus-then-bfs_f-ffparser/: main.cxx
src/ltl/: CMakeLists.txt  bit_array.cxx  bit_array.hxx  bit_matrix.hxx  bit_set.cxx  bit_set.hxx  bit_square_matrix.hxx  bloomfilter.hxx  ext_math.hxx  hash_functions.hxx  hash_table.hxx  jenkins_12bit.hxx  math_utility.hxx  memory.cxx  memory.hxx  resources_control.cxx  resources_control.hxx  sliding_window.hxx  string_conversions.hxx  time.hxx  types.hxx
src/model/: action.cxx  action.hxx  cond_eff.cxx  cond_eff.hxx  conj_comp_prob.cxx  conj_comp_prob.hxx  fl_conj.cxx  fl_conj.hxx  fluent.cxx  fluent.hxx  fwd_search_prob.cxx  fwd_search_prob.hxx  mutex_set.cxx  mutex_set.hxx  search_prob.hxx  strips_prob.cxx  strips_prob.hxx  strips_state.cxx  strips_state.hxx  succ_gen.cxx  succ_gen.hxx
src/node_eval/heuristic/: bs_graph.hxx  ff_rp_heuristic.hxx  h_1.hxx  h_2.hxx  h_C.hxx  h_null.hxx  h_unsat.hxx  h_unsat_mutex.hxx  heuristic.hxx  landmark_count.hxx  landmark_graph.cxx  landmark_graph.hxx  landmark_graph_generator.hxx  landmark_graph_manager.hxx  layered_h_max.hxx  rp_heuristic.hxx
src/node_eval/novelty/: CMakeLists.txt  approximate_novelty.hxx  approximate_novelty_partition_1.hxx  approximate_novelty_partition_2.hxx  node_novelty_spaces.hxx  novelty.hxx  novelty_partition.hxx  novelty_partition_1.hxx  novelty_partition_2.hxx
src/planner/: CMakeLists.txt  planner.hxx  planner_py_module.cxx
src/planner/anytime_lapkt/: anytime_lapkt.cxx  anytime_lapkt.hxx  planner_config.yml
src/planner/approximate_novelty_search/: CMakeLists.txt
src/planner/approximate_novelty_search/approximate_bfws/: CMakeLists.txt  approximate_bfws.cxx  approximate_bfws.hxx  planner_config.yml
src/planner/approximate_novelty_search/approximate_dfs_plus/: CMakeLists.txt  approximate_dfs_plus.cxx  approximate_dfs_plus.hxx  planner_config.yml
src/planner/approximate_novelty_search/approximate_iw/: CMakeLists.txt  approximate_iw.cxx  approximate_iw.hxx  planner_config.yml
src/planner/approximate_novelty_search/approximate_iw_plus/: CMakeLists.txt  approximate_rp_iw.cxx  approximate_rp_iw.hxx  planner_config.yml
src/planner/approximate_novelty_search/approximate_siw/: CMakeLists.txt  approximate_siw.cxx  approximate_siw.hxx  planner_config.yml
src/planner/at_bfs_f/: at_bfsf_planner.cxx  at_bfsf_planner.hxx  planner_config.yml
src/planner/bfs_f/: bfsf_planner.cxx  bfsf_planner.hxx  planner_config.yml
src/planner/bfws/: bfws.cxx  bfws.hxx  planner_config.yml
src/planner/brfs/: brfs_planner.cxx  brfs_planner.hxx  planner_config.yml
src/planner/delete-free-iw/: dfiw_planner.cxx  dfiw_planner.hxx  planner_config.yml
src/planner/delete-free-siw/: dfsiw_planner.cxx  dfsiw_planner.hxx  planner_config.yml
src/planner/dfs_plus/: dfs_plus_planner.cxx  dfs_plus_planner.hxx  planner_config.yml
src/planner/iw/: iw_planner.cxx  iw_planner.hxx  planner_config.yml
src/planner/iw_plus/: planner_config.yml  rp_iw_planner.cxx  rp_iw_planner.hxx
src/planner/siw/: planner_config.yml  siw_planner.cxx  siw_planner.hxx
src/planner/siw_plus/: planner_config.yml  siw_plus_planner.cxx  siw_plus_planner.hxx
src/planner/siw_plus-then-bfs_f/: planner_config.yml  siw_plus_bfs_f.cxx  siw_plus_bfs_f.hxx
src/python/: CMakeLists.txt  README.md
src/python/_package/: setup.py
src/wrapper/: h_1_callback.hxx  py_strips_interface.cxx  py_strips_interface.hxx  pybind11_module.cxx
test/ctest/common/: nwn.cxx  toy_graph.cxx  toy_graph.hxx
test/ctest/test_model/: test_STRIPS_Problem.cxx
tests/examples/fd-preproc-interface/: main.cxx
tests/examples/ff-interface/: main.cxx
tests/instantiator_test/: test_classical_instantiation.py
tests/planner_test/: test_all_planners.py
(+31 files in other folders)
